--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "simple-icons": "^15.10.0",
     "tailwindcss": "^3.4.13"
   }
 }
